# Photon

./: .env  .gitignore  Cargo.toml  README.md  run_test.bat
.config/: nextest.toml
crates/agent/: Cargo.toml  README.md
crates/agent/prompts/: adjudication_prompt_template.md  debate_synthesis_template.md  fundamental_skill.md  fundamental_skill_desc.md  host_prompt_template.md  macro_skill.md  macro_skill_desc.md  plan_review_prompt_template.md  planning_prompt_template.md  reflection_prompt_template.md  replanning_prompt_template.md  sentiment_skill.md  sentiment_skill_desc.md  short_seller_skill.md  short_seller_skill_desc.md  synthesis_prompt_template.md  technical_skill.md  technical_skill_desc.md  verification_prompt_template.md
crates/agent/src/: config.rs  host.rs  lib.rs  manager.rs  skills.rs  types.rs
crates/agent/src/llm/: gemini3_flash.rs  mod.rs  openai.rs  qwen3_flash.rs
crates/agent/src/personas/: fundamental_skill.rs  macro_skill.rs  mod.rs  sentiment_skill.rs  short_seller_skill.rs  technical_skill.rs
crates/agent/src/store/: local.rs  mod.rs
crates/agent/tests/: manager_test.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  enums.rs  error.rs  lib.rs  market.rs  oms.rs  primitive.rs  strategy.rs  time.rs  validate.rs
crates/execution/: Cargo.toml
crates/factory/: Cargo.toml
crates/feed/: Cargo.toml
crates/risk/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  lib.rs  redis.rs
crates/storage/src/repository/: account_repo.rs  market_repo.rs  mod.rs  order_repo.rs  strategy_repo.rs
crates/storage/src/repository/common/: mod.rs
crates/storage/tests/: account_repo_test.rs  common_repo_test.rs  csv_import.rs  market_repo_test.rs  order_repo_test.rs  redis_test.rs  strategy_repo_test.rs
crates/strategy/: Cargo.toml
services/engine/: Cargo.toml
services/engine/src/: main.rs
